Fixed filters on mobile

--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -956,12 +956,13 @@
    position: absolute;
    top: var(--container-padding);
    right: var(--container-padding);
+   z-index: 99;
 }
 
 .filter-container .filter-box {
    background-color: var(--color-lightgray);
    border-radius: var(--border-radius);
-   max-width: 20em;
+   max-width: 100vw;
    padding: var(--container-padding);
    transform: translateY(2em) rotate(0.001deg);
    opacity: 0;
@@ -981,6 +982,9 @@
    transform: translateY(0em) rotate(0.001deg);
    opacity: 1;
    visibility: visible;
+   height: 90vh;
+   overflow-y: scroll;
+
 }
 
 .filter-container .overlay-dark {
